==> netscream/dactyl_cc/keyboards/dactyl_cc/teensy40/I2Cv1/hal_i2c_lld.c <==
#include "osal.h"
#include "hal.h"
#include "MIMXRT1062.h"
#include "fsl_iomuxc.h"
#include "fsl_lpi2c.h"
#include "print.h"
#define FSL_COMPONENT_ID "platform.drivers.lpi2c"

void i2c_lld_init(void) {
    print("I2C Initialized!\n");

CLOCK_SetMux(kCLOCK_Lpi2cMux, 0);
CLOCK_SetDiv(kCLOCK_Lpi2cDiv, 5);
#if MIMXRT1062_I2C_USE_I2C1 == TRUE
  i2cObjectInit(&I2CD1);
  #if defined(LPI2C1)
  I2CD1.i2c = LPI2C1;
  #endif
  I2CD1.i2c_irq = LPI2C1_IRQn;
  I2CD1.i2c_irq_prio = MIMXRT1062_I2C_I2C1_PRIORITY;
  I2CD1.state = I2C_STOP;
  CLOCK_EnableClock(kCLOCK_Lpi2c1);
#endif
#if MIMXRT1062_I2C_USE_I2C2 == TRUE
  i2cObjectInit(&I2CD2);
  #if defined(LPI2C2)
  I2CD3.i2c = LPI2C2;
  #endif
  I2CD2.i2c_irq = LPI2C2_IRQn;
  I2CD2.i2c_irq_prio = MIMXRT1062_I2C_I2C2_PRIORITY;
  I2CD2.state = I2C_STOP;
  CLOCK_EnableClock(kCLOCK_Lpi2c2);
#endif
#if MIMXRT1062_I2C_USE_I2C3 == TRUE
  i2cObjectInit(&I2CD3);
  #if defined(LPI2C3)
  I2CD3.i2c = LPI2C3;
  #endif
  I2CD3.i2c_irq = LPI2C3_IRQn;
  I2CD3.i2c_irq_prio = MIMXRT1062_I2C_I2C3_PRIORITY;
  I2CD3.state = I2C_STOP;
  IOMUXC_SetPinMux(IOMUXC_GPIO_AD_B1_07_LPI2C3_SCL, 1);
  IOMUXC_SetPinMux(IOMUXC_GPIO_AD_B1_06_LPI2C3_SDA, 1);
  IOMUXC_SetPinConfig(IOMUXC_GPIO_AD_B1_07_LPI2C3_SCL, 0x888);
  IOMUXC_SetPinConfig(IOMUXC_GPIO_AD_B1_06_LPI2C3_SDA, 0x888);
  CLOCK_EnableClock(kCLOCK_Lpi2c3);
#endif
}

void i2c_lld_start(I2CDriver *i2cp) {
  LPI2C_Type * i2c = i2cp->i2c;


  if (i2cp->state == I2C_STOP) {
    LPI2C_MasterGetDefaultConfig(&i2cp->mconfig);
    LPI2C_MasterInit(i2c, &i2cp->mconfig, I2CSrcFreq());


    //LPI2C_MasterEnableInterrupts(i2c, i2cp->i2c_irq_prio);
    //nvicEnableVector(i2cp->i2c_irq, i2cp->i2c_irq_prio);
  }

}

void i2c_lld_stop(I2CDriver *i2cp)
{
  LPI2C_Type * i2c = i2cp->i2c;
  if (i2cp->state != I2C_STOP)
  {
      nvicDisableVector(i2cp->i2c_irq);
      LPI2C_MasterDeinit(i2c);
  }
}

msg_t i2c_lld_master_receive_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                     uint8_t *rxbuf, size_t rxbytes,
                                     sysinterval_t timeout)
{
    /*
    i2cp->cmd = i2c_recv;
    i2cp->addr = addr;
    i2cp->rxbuff = rxbuf;
    i2cp->rxlen = rxbytes;
    return MasterTransferBlocking(i2cp, timeout);*/
    lpi2c_master_transfer_t xfer;

    xfer.flags          = kLPI2C_TransferDefaultFlag;
    xfer.slaveAddress   = addr;
    xfer.direction      = kLPI2C_Read;
    xfer.subaddress     = i2cp->reg;
    xfer.subaddressSize = i2cp->reglen;
    xfer.data           = rxbuf;
    xfer.dataSize       = rxbytes;

    return kStatus_Success == LPI2C_MasterTransferBlocking(i2cp->i2c, &xfer) ? MSG_OK : MSG_TIMEOUT;
}

msg_t i2c_lld_master_transmit_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                      const uint8_t *txbuf, size_t txbytes,
                                      uint8_t *rxbuf, size_t rxbytes,
                                      sysinterval_t timeout)
{
    /*
    i2cp->cmd = i2c_transm;
    i2cp->addr = addr;
    i2cp->txbuff = txbuf;
    i2cp->txlen = txbytes;
    i2cp->rxbuff = rxbuf;
    i2cp->rxlen = rxbytes;
    return MasterTransferBlocking(i2cp, timeout);
    */
    lpi2c_master_transfer_t xfer;

    xfer.flags          = kLPI2C_TransferDefaultFlag;
    xfer.slaveAddress   = addr;
    xfer.direction      = kLPI2C_Write;
    xfer.subaddress     = i2cp->reg;
    xfer.subaddressSize = i2cp->reglen;
    xfer.data           = (uint8_t*)txbuf;
    xfer.dataSize       = txbytes;
    return kStatus_Success == LPI2C_MasterTransferBlocking(i2cp->i2c, &xfer) ? MSG_OK : MSG_TIMEOUT;
}
